--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mux/mux-node": "^9.0.1",
+    "@mux/mux-player-react": "^3.2.3",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -35,21 +38,24 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^15.1.2",
     "postcss": "8.4.49",
-    "react": "19.0.0",
+    "quill": "^2.0.3",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.16",
     "tailwindcss-animate": "^1.0.7",
