--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mux/mux-player-react": "^3.2.3",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
