--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
-    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.16",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
     "uploadthing": "^7.4.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "prisma": "^6.1.0"
