--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.468.0",
     "next": "^15.1.2",
     "postcss": "8.4.49",
+    "query-string": "^9.1.1",
     "quill": "^2.0.3",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
