--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-scroll": "^1.9.0",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.16",
