--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-scroll": "^1.9.0",
+    "recharts": "^2.15.0",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "3.4.16",
