--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-scroll": "^1.9.0",
     "recharts": "^2.15.0",
     "stripe": "^17.5.0",
